--- a/client/src/main/res/layout/activity_users_list.xml
+++ b/client/src/main/res/layout/activity_users_list.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    tools:context="com.jraska.github.client.UsersActivity">
+    tools:context=".ui.UsersActivity">
 
     <android.support.design.widget.AppBarLayout
         android:layout_height="wrap_content"
