--- a/client/src/main/res/layout/content_users_list.xml
+++ b/client/src/main/res/layout/content_users_list.xml
@@ -10,7 +10,7 @@
     android:paddingBottom="@dimen/activity_vertical_margin"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:showIn="@layout/activity_users_list"
-    tools:context=".UsersActivity">
+    tools:context=".ui.UsersActivity">
 
     <TextView
         android:text="Hello World!"
