--- a/client/src/main/res/values/dimens.xml
+++ b/client/src/main/res/values/dimens.xml
@@ -1,5 +1,17 @@
 <resources>
-    <!-- Default screen margins, per the Android Design guidelines. -->
+    <dimen name="list_item_height">72dp</dimen>
+    <dimen name="list_item_vertical_margin">12dp</dimen>
+    <dimen name="side_padding">16dp</dimen>
+    <dimen name="icon_size">48dp</dimen>
+    <dimen name="padding_small">4dp</dimen>
+    <dimen name="padding_medium">8dp</dimen>
+
+    <dimen name="textTitle">24sp</dimen>
+    <dimen name="textSubtitle">16sp</dimen>
+
+    <dimen name="textMain">16sp</dimen>
+    <dimen name="textSecondary">14sp</dimen>
+
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
     <dimen name="fab_margin">16dp</dimen>
