--- a/client/src/main/res/layout/activity_user_detail.xml
+++ b/client/src/main/res/layout/activity_user_detail.xml
@@ -22,6 +22,14 @@
             app:layout_scrollFlags="scroll|exitUntilCollapsed"
             app:contentScrim="?attr/colorPrimary">
 
+            <ImageView
+                android:id="@+id/user_detail_avatar"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:fitsSystemWindows="true"
+                android:scaleType="centerCrop"
+                app:layout_collapseMode="parallax" />
+
             <android.support.v7.widget.Toolbar
                 android:id="@+id/toolbar"
                 android:layout_height="?attr/actionBarSize"
@@ -35,12 +43,12 @@
     <include layout="@layout/content_user_detail" />
 
     <android.support.design.widget.FloatingActionButton
-        android:id="@+id/fab"
+        android:id="@+id/user_detail_github_fab"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="@dimen/fab_margin"
         app:layout_anchor="@id/app_bar"
         app:layout_anchorGravity="bottom|end"
-        android:src="@android:drawable/ic_dialog_email" />
+        android:src="@drawable/ic_github_48dp" />
 
 </android.support.design.widget.CoordinatorLayout>
