--- a/client/src/main/res/layout/content_user_detail.xml
+++ b/client/src/main/res/layout/content_user_detail.xml
@@ -8,10 +8,77 @@
     android:layout_height="match_parent"
     tools:context="com.jraska.github.client.ui.UserDetailActivity">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_margin="@dimen/text_margin"
-        android:text="@string/large_text" />
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:layout_marginLeft="@dimen/text_margin"
+        android:layout_marginRight="@dimen/text_margin">
+
+        <TextView
+            android:id="@+id/user_detail_joined"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="start|center_vertical"
+            android:paddingLeft="@dimen/text_margin"
+            android:paddingRight="@dimen/text_margin"
+            android:paddingBottom="@dimen/padding_medium"
+            android:paddingTop="@dimen/padding_medium"
+            android:textSize="@dimen/textMain"
+            android:drawableLeft="@drawable/ic_history_24dp"
+            android:drawablePadding="@dimen/padding_medium"
+            tools:text="Joined on Dec 28, 2013"/>
+
+        <LinearLayout
+            android:id="@+id/user_detail_basic_info_container"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:weightSum="3"
+            >
+
+            <TextView
+                android:id="@+id/user_detail_repos_count"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:gravity="center"
+                android:textSize="@dimen/textMain"
+                android:drawableTop="@drawable/ic_repos_48dp"
+                tools:text="2" />
+
+            <TextView
+                android:id="@+id/user_detail_following_count"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:gravity="center"
+                android:textSize="@dimen/textMain"
+                android:drawableTop="@drawable/ic_following_48dp"
+                tools:text="20" />
+
+
+            <TextView
+                android:id="@+id/user_detail_followers_count"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:gravity="center"
+                android:textSize="@dimen/textMain"
+                android:drawableTop="@drawable/ic_followers_48dp"
+                tools:text="20"/>
+
+        </LinearLayout>
+
+
+
+
+        <TextView
+            android:id="@+id/user_detail_long_text_to_scrolling_showcase"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/large_text" />
+
+    </LinearLayout>
+
 
 </android.support.v4.widget.NestedScrollView>
