--- a/client/src/main/res/layout/content_user_detail.xml
+++ b/client/src/main/res/layout/content_user_detail.xml
@@ -15,62 +15,12 @@
         android:layout_marginLeft="@dimen/text_margin"
         android:layout_marginRight="@dimen/text_margin">
 
-        <TextView
-            android:id="@+id/user_detail_joined"
+        <fragment
+            android:id="@+id/fragment_user_stats"
+            android:name="com.jraska.github.client.ui.UserStatsFragment"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:gravity="start|center_vertical"
-            android:paddingLeft="@dimen/text_margin"
-            android:paddingRight="@dimen/text_margin"
-            android:paddingBottom="@dimen/padding_medium"
-            android:paddingTop="@dimen/padding_medium"
-            android:textSize="@dimen/textMain"
-            android:drawableLeft="@drawable/ic_history_24dp"
-            android:drawablePadding="@dimen/padding_medium"
-            tools:text="Joined on Dec 28, 2013"/>
-
-        <LinearLayout
-            android:id="@+id/user_detail_basic_info_container"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:weightSum="3"
-            >
-
-            <TextView
-                android:id="@+id/user_detail_repos_count"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:gravity="center"
-                android:textSize="@dimen/textMain"
-                android:drawableTop="@drawable/ic_repos_48dp"
-                tools:text="2" />
-
-            <TextView
-                android:id="@+id/user_detail_following_count"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:gravity="center"
-                android:textSize="@dimen/textMain"
-                android:drawableTop="@drawable/ic_following_48dp"
-                tools:text="20" />
-
-
-            <TextView
-                android:id="@+id/user_detail_followers_count"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:gravity="center"
-                android:textSize="@dimen/textMain"
-                android:drawableTop="@drawable/ic_followers_48dp"
-                tools:text="20"/>
-
-        </LinearLayout>
-
-
-
+            tools:layout="@layout/fragment_user_stats"/>
 
         <TextView
             android:id="@+id/user_detail_long_text_to_scrolling_showcase"
