--- a/client/src/main/res/layout/content_users_list.xml
+++ b/client/src/main/res/layout/content_users_list.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<fragment xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/fragment_users"
+    android:name="com.jraska.github.client.ui.UsersFragment"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
@@ -9,10 +11,6 @@
     android:paddingBottom="@dimen/activity_vertical_margin"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:showIn="@layout/activity_users_list"
-    tools:context=".ui.UsersActivity">
-
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/users_recycler"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent" />
-</FrameLayout>
+    tools:context=".ui.UsersActivity"
+    tools:layout="@layout/fragment_users">
+</fragment>
