--- a/client/src/main/res/layout/content_user_detail.xml
+++ b/client/src/main/res/layout/content_user_detail.xml
@@ -22,11 +22,12 @@
             android:layout_height="wrap_content"
             tools:layout="@layout/fragment_user_stats"/>
 
-        <TextView
-            android:id="@+id/user_detail_long_text_to_scrolling_showcase"
-            android:layout_width="wrap_content"
+        <fragment
+            android:id="@+id/fragment_user_repos"
+            android:name="com.jraska.github.client.ui.ReposFragment"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/large_text" />
+            tools:layout="@layout/fragment_repos"/>
 
     </LinearLayout>
 
