--- a/client/src/main/res/values/colors.xml
+++ b/client/src/main/res/values/colors.xml
@@ -4,4 +4,5 @@
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
     <color name="textMain">#202020</color>
+    <color name="textSecondary">#767676</color>
 </resources>
