--- a/client/src/main/res/layout/content_user_detail.xml
+++ b/client/src/main/res/layout/content_user_detail.xml
@@ -23,7 +23,14 @@
             tools:layout="@layout/fragment_user_stats"/>
 
         <fragment
-            android:id="@+id/fragment_user_repos"
+            android:id="@+id/fragment_user_popular_repos"
+            android:name="com.jraska.github.client.ui.ReposFragment"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            tools:layout="@layout/fragment_repos"/>
+
+        <fragment
+            android:id="@+id/fragment_user_contributed_repos"
             android:name="com.jraska.github.client.ui.ReposFragment"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
