--- a/client/src/main/res/layout/fragment_repos.xml
+++ b/client/src/main/res/layout/fragment_repos.xml
@@ -1,5 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v7.widget.RecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/repos_recycler"
+<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent" />
+    android:layout_height="wrap_content"
+    app:cardElevation="@dimen/elevation_resting"
+    app:cardCornerRadius="@dimen/corner_radius"
+    app:cardUseCompatPadding="true"
+    >
+
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/repos_recycler"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="@dimen/padding_medium"/>
+</android.support.v7.widget.CardView>
