--- a/client/src/main/res/values/dimens.xml
+++ b/client/src/main/res/values/dimens.xml
@@ -17,4 +17,7 @@
     <dimen name="fab_margin">16dp</dimen>
     <dimen name="app_bar_height">180dp</dimen>
     <dimen name="text_margin">16dp</dimen>
+
+    <dimen name="elevation_resting">2dp</dimen>
+    <dimen name="corner_radius">3dp</dimen>
 </resources>
