Add swipe refresh layout to users list

--- a/client/src/main/res/values/dimens.xml
+++ b/client/src/main/res/values/dimens.xml
@@ -20,4 +20,6 @@
 
     <dimen name="elevation_resting">2dp</dimen>
     <dimen name="corner_radius">3dp</dimen>
+
+    <dimen name="swipe_progress_circle_diameter">40dp</dimen>
 </resources>
