--- a/client/src/main/res/layout/fragment_repos.xml
+++ b/client/src/main/res/layout/fragment_repos.xml
@@ -6,12 +6,12 @@
     android:layout_height="wrap_content"
     app:cardElevation="@dimen/elevation_resting"
     app:cardCornerRadius="@dimen/corner_radius"
-    app:cardUseCompatPadding="true"
-    >
+    app:cardUseCompatPadding="true">
 
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/repos_recycler"
+    <com.jraska.github.client.widget.RepeaterLayout
+        android:id="@+id/repos_repeater"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="@dimen/padding_medium"/>
+        android:orientation="vertical"
+        android:layout_margin="@dimen/padding_medium" />
 </android.support.v7.widget.CardView>
