--- a/client/src/main/res/layout/fragment_repos.xml
+++ b/client/src/main/res/layout/fragment_repos.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/repos_container"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
@@ -8,10 +9,31 @@
     app:cardCornerRadius="@dimen/corner_radius"
     app:cardUseCompatPadding="true">
 
-    <com.jraska.github.client.widget.RepeaterLayout
-        android:id="@+id/repos_repeater"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:layout_margin="@dimen/padding_medium" />
+        android:orientation="vertical">
+
+        <TextView
+            android:id="@+id/repos_title"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:singleLine="true"
+            android:ellipsize="end"
+            android:textSize="@dimen/textTitle"
+            android:textColor="@color/textMain"
+            android:background="@color/colorAccent"
+            tools:text="Popular"
+            />
+
+        <com.jraska.github.client.widget.RepeaterLayout
+            android:id="@+id/repos_repeater"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:layout_margin="@dimen/padding_medium" />
+    </LinearLayout>
+
+
 </android.support.v7.widget.CardView>
