--- a/client/src/main/res/layout/fragment_repos.xml
+++ b/client/src/main/res/layout/fragment_repos.xml
@@ -19,7 +19,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center"
-            android:singleLine="true"
+            android:maxLines="1"
             android:ellipsize="end"
             android:textSize="@dimen/textTitle"
             android:textColor="@color/textMain"
