--- a/client/src/main/res/layout/fragment_repos.xml
+++ b/client/src/main/res/layout/fragment_repos.xml
@@ -9,31 +9,30 @@
     app:cardCornerRadius="@dimen/corner_radius"
     app:cardUseCompatPadding="true">
 
-    <LinearLayout
+  <LinearLayout
+      android:layout_width="match_parent"
+      android:layout_height="wrap_content"
+      android:orientation="vertical">
+
+    <TextView
+        android:id="@+id/repos_title"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical">
+        android:gravity="center"
+        android:maxLines="1"
+        android:ellipsize="end"
+        android:textSize="@dimen/textTitle"
+        android:textColor="@color/textMain"
+        android:background="@color/colorAccent"
+        tools:text="Popular" />
 
-        <TextView
-            android:id="@+id/repos_title"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:gravity="center"
-            android:maxLines="1"
-            android:ellipsize="end"
-            android:textSize="@dimen/textTitle"
-            android:textColor="@color/textMain"
-            android:background="@color/colorAccent"
-            tools:text="Popular"
-            />
-
-        <com.jraska.github.client.widget.RepeaterLayout
-            android:id="@+id/repos_repeater"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:layout_margin="@dimen/padding_medium" />
-    </LinearLayout>
+    <com.jraska.github.client.widget.RepeaterLayout
+        android:id="@+id/repos_repeater"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:layout_margin="@dimen/padding_medium" />
+  </LinearLayout>
 
 
 </android.support.v7.widget.CardView>
