--- a/client/src/main/res/layout/content_user_detail.xml
+++ b/client/src/main/res/layout/content_user_detail.xml
@@ -1,47 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:showIn="@layout/activity_user_detail"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.jraska.github.client.ui.UserDetailActivity">
+    app:layout_behavior="@string/appbar_scrolling_view_behavior"
+    tools:context="com.jraska.github.client.ui.UserDetailActivity"
+    tools:showIn="@layout/activity_user_detail">
 
-  <LinearLayout
+  <android.support.v7.widget.RecyclerView
+      android:id="@+id/user_detail_recycler"
       android:layout_width="match_parent"
-      android:layout_height="match_parent"
-      android:orientation="vertical">
-
-    <fragment
-        android:id="@+id/fragment_user_stats"
-        android:name="com.jraska.github.client.ui.UserStatsFragment"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="@dimen/activity_vertical_margin"
-        tools:layout="@layout/fragment_user_stats" />
-
-    <fragment
-        android:id="@+id/fragment_user_popular_repos"
-        android:name="com.jraska.github.client.ui.ReposFragment"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="@dimen/activity_horizontal_margin"
-        android:layout_marginEnd="@dimen/activity_horizontal_margin"
-        android:layout_marginBottom="@dimen/activity_vertical_margin"
-        tools:layout="@layout/fragment_repos" />
-
-    <fragment
-        android:id="@+id/fragment_user_contributed_repos"
-        android:name="com.jraska.github.client.ui.ReposFragment"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="@dimen/activity_horizontal_margin"
-        android:layout_marginEnd="@dimen/activity_horizontal_margin"
-        android:layout_marginBottom="@dimen/activity_vertical_margin"
-        tools:layout="@layout/fragment_repos" />
-
-  </LinearLayout>
-
+      android:layout_height="wrap_content"
+      app:layout_behavior="@string/appbar_scrolling_view_behavior" />
 
 </android.support.v4.widget.NestedScrollView>
