--- a/client/src/main/res/layout/item_repos_section.xml
+++ b/client/src/main/res/layout/item_repos_section.xml
@@ -5,6 +5,9 @@
     android:id="@+id/repos_container"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:layout_marginBottom="@dimen/activity_vertical_margin"
+    android:layout_marginEnd="@dimen/activity_horizontal_margin"
+    android:layout_marginStart="@dimen/activity_horizontal_margin"
     app:cardElevation="@dimen/elevation_resting"
     app:cardCornerRadius="@dimen/corner_radius"
     app:cardUseCompatPadding="true">
