--- a/client/src/main/res/layout/content_users_list.xml
+++ b/client/src/main/res/layout/content_users_list.xml
@@ -1,15 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <fragment xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/fragment_users"
-    android:name="com.jraska.github.client.ui.UsersFragment"
-    xmlns:tools="http://schemas.android.com/tools"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:showIn="@layout/activity_users_list"
-    tools:context=".ui.UsersActivity"
-    tools:layout="@layout/fragment_users"></fragment>
+          xmlns:app="http://schemas.android.com/apk/res-auto"
+          xmlns:tools="http://schemas.android.com/tools"
+          android:id="@+id/fragment_users"
+          android:name="com.jraska.github.client.ui.UsersFragment"
+          android:layout_width="match_parent"
+          android:layout_height="match_parent"
+          android:paddingBottom="@dimen/activity_vertical_margin"
+          android:paddingLeft="@dimen/activity_horizontal_margin"
+          android:paddingRight="@dimen/activity_horizontal_margin"
+          app:layout_behavior="@string/appbar_scrolling_view_behavior"
+          tools:context=".ui.UsersActivity"
+          tools:layout="@layout/fragment_users"
+          tools:showIn="@layout/activity_users_list"/>
